# Pyramid

./: .gitmodules  CMakeLists.txt  README.md
external_libraries/glad/include/glad/: glad.h
external_libraries/glad/src/: glad.c
inc/: filesystem.h  shader_s.h
src/: main.cpp
